Reset clipping region it PutImageData so that it doesn't clip the output, per spec.  r=vlad  sr=dbaron  (Bug 433397)